poke/testsuite/poke.pkl/bnot-diag-1.pk
/* { dg-do compile } */

defvar a = ~[1,2,3]; /* { dg-error "invalid operand" } */
